# final-project-soul-finders

./: .gitignore  Collaboration.md  README.md  pyproject.toml  requirements.txt
examples/: main.py
src/: __init__.py  main.py  turbine.py
src/compute/: __init__.py
tests/: test_basic.py  test_operational_strategy.py  test_plotting.py  test_rotor_computation.py  test_rotor_performance.py
