[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "compute"
description = "A package"
version = "0.0.1"
authors = [
    { name = "Maksymilian Stepniewski", email = "s250235@dtu.dk" },
    { name = "Fernando Guerra", email = "s240098@dtu.dk"}
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pytest"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-soul-finders.git"